fixes stupid intercom overlap

--- a/client/app/main/material.css
+++ b/client/app/main/material.css
@@ -211,7 +211,7 @@ md-sidenav.md-sidenav-right ul {
 
 .md-button.md-fab.md-fab-bottom-right {
   top: auto;
-  right: 20px;
+  right: 80px;
   bottom: 20px;
   left: auto;
   position: fixed;
